2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b12-UNSTABLE

 * Update: WZ Tooltip and WZ jsgraphic

 * Change: Adjustments to the WZ update.

 * CHANGE: Name attrib of photos from 'photo_j' to 'myPic'

 * Fix/Change: Use ImageMaps only when fitToWindow is off.


 !! view_photo.php has functionality which comes in b13 !!

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b11

 * Fix: HTML Fixes.

 * Change: Removed unused var in rss.php.

 * Fix: Some plural translations.

 
2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b10

 * Change: Removed function make_attrs(), only use generateAttrs()

 * Fix: form_print_services() sometimes checked wrong items.

 * Change: Little static cache in getPath().

 * Change: Enhanced check_gallery_version() and checkVersions().


2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b9

 * Fix: fitToWindow Fix


2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b8

 Fix: Add missing Parameter for Gallery Remote in drawApplet()

 Fix: Valid HTML Output from dismissAndReload()

 Fix: Vali HTML Output and correct use of $url param in dismissAndLoad()

 Change: Skip . and .. in available_skins()

 Change: Nicer output from formatted_filesize()

 Fix: Avoid notices in unhtmlentities()

 Change: Made welcome_email() more comfortable.
  

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b7

 * Fix: Javascript bugs
 

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b6

 * Update: Gallery 1.5.8 works with phpBB2 up to 2.0.22

 * Fix: HTML Fix in usermanagement.

 * Change: Added a target to links to printservices.

 * Fix: Show 'comment' statistics link only when comments are enabled.
        Also some HTML nicify.


2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b5

 * Change: Give better information when adding an item in case its a movie.

 * Change: Sometimes there a folder in the albums dir that are valid,
		   but Gallery sees them as invalid.
		   Was only 'CVS' in the past. Increased the list. ('svn' etc.)
