@@ -1,3 +1,15 @@
+2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b13
+
+ * Change: Enhanced function getItemActions()
+		 - Added param $popupsOnly and $caption
+		 - Former 'pure_text' is now 'text'
+		 - Former 'text' is now 'value'
+		 - Added Optional icon
+		 - Fixed several wrong conditions
+		 - Added sorting by field 'text'
+
+ * 
+		
 2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b12-UNSTABLE
 
  * Update: WZ Tooltip and WZ jsgraphic
